--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,39 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Text -->
+    <dimen name="typography_display4">112sp</dimen>
+    <dimen name="typography_display3">56sp</dimen>
+    <dimen name="typography_display2">45sp</dimen>
+    <dimen name="typography_display1">34sp</dimen>
+    <dimen name="typography_headline">24sp</dimen>
+    <dimen name="typography_title">20sp</dimen>
+    <dimen name="typography_subheading">16sp</dimen>
+    <dimen name="typography_body2">14sp</dimen>
+    <dimen name="typography_body1">14sp</dimen>
+    <dimen name="typography_caption">12sp</dimen>
+    <dimen name="typography_button">14sp</dimen>
+
+    <!-- Margin -->
+    <dimen name="margin0">0dp</dimen>
+    <dimen name="margin1">4dp</dimen>
+    <dimen name="margin2">8dp</dimen>
+    <dimen name="margin3">12dp</dimen>
+    <dimen name="margin4">16dp</dimen>
+    <dimen name="margin5">20dp</dimen>
+    <dimen name="margin6">24dp</dimen>
+    <dimen name="margin7">28dp</dimen>
+    <dimen name="margin8">34dp</dimen>
+    <dimen name="margin9">50dp</dimen>
+
+    <!-- Padding -->
+    <dimen name="padding0">0dp</dimen>
+    <dimen name="padding1">4dp</dimen>
+    <dimen name="padding2">8dp</dimen>
+    <dimen name="padding3">12dp</dimen>
+    <dimen name="padding4">16dp</dimen>
+    <dimen name="padding5">20dp</dimen>
+    <dimen name="padding6">24dp</dimen>
+    <dimen name="padding7">28dp</dimen>
 </resources>
