--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,144 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="colorPrimaryDark">@color/cp2</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/cp3</item>
+
+        <item name="actionBarStyle">@style/AppTheme.ToolBar.Light.Transparent</item>
     </style>
 
+    <!-- Action bars & Tool bars-->
+    <style name="AppTheme.ToolBar.Light.Transparent" parent="Base.Widget.AppCompat.ActionBar">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="elevation">0dp</item>
+        <item name="android:elevation" tools:targetApi="lollipop">0dp</item>
+    </style>
+
+
+    <style name="typography_dark">
+        <item name="android:textColor">@color/shade6</item>
+        <item name="android:colorAccent">@color/shade1</item>
+    </style>
+
+    <style name="typography_light">
+        <item name="android:textColor">@color/shade0</item>
+        <item name="android:colorAccent">@color/shade5</item>
+    </style>
+
+    <style name="typography_display4" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_display4</item>
+    </style>
+
+    <style name="typography_display3" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_display3</item>
+    </style>
+
+    <style name="typography_display2" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_display2</item>
+    </style>
+
+    <style name="typography_display1" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_display1</item>
+    </style>
+
+    <style name="typography_headline" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_headline</item>
+    </style>
+
+    <style name="typography_title" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_title</item>
+        <item name="android:fontFamily">@string/font_family_medium</item>
+    </style>
+
+    <style name="typography_subheading" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_subheading</item>
+    </style>
+
+    <style name="typography_body2" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_body2</item>
+        <item name="android:fontFamily">@string/font_family_medium</item>
+    </style>
+
+    <style name="typography_body1" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_body1</item>
+    </style>
+
+    <style name="typography_caption" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_caption</item>
+    </style>
+
+    <style name="typography_button" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_button</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">@string/font_family_medium</item>
+    </style>
+
+    <style name="typography_display4_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_display4</item>
+    </style>
+
+    <style name="typography_display3_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_display3</item>
+    </style>
+
+    <style name="typography_display2_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_display2</item>
+    </style>
+
+    <style name="typography_display1_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_display1</item>
+    </style>
+
+    <style name="typography_headline_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_headline</item>
+    </style>
+
+    <style name="typography_title_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_title</item>
+        <item name="android:fontFamily">@string/font_family_medium</item>
+    </style>
+
+    <style name="typography_subheading_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_subheading</item>
+    </style>
+
+    <style name="typography_body2_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_body2</item>
+        <item name="android:fontFamily">@string/font_family_medium</item>
+    </style>
+
+    <style name="typography_body1_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_body1</item>
+    </style>
+
+    <style name="typography_caption_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_caption</item>
+    </style>
+
+    <style name="typography_button_light" parent="typography_light">
+        <item name="android:textSize">@dimen/typography_button</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">@string/font_family_medium</item>
+    </style>
+
+
+    <style name="tv_subtitle" parent="typography_dark">
+        <item name="android:layout_marginTop">@dimen/margin2</item>
+        <item name="android:layout_marginLeft">@dimen/margin5</item>
+        <item name="android:textColor">@color/shade3</item>
+        <item name="android:textSize">@dimen/typography_subheading</item>
+    </style>
+
+
+    <style name="tv_content" parent="typography_dark">
+        <item name="android:textSize">@dimen/typography_body1</item>
+        <item name="android:layout_marginLeft">@dimen/margin7</item>
+        <item name="android:layout_marginRight">@dimen/margin7</item>
+        <item name="android:textColor">@color/shade4</item>
+    </style>
 </resources>
