--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.udacity.sandwichclub.MainActivity">
 
-    <ListView
-        android:id="@+id/sandwiches_listview"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_burger"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin8"
+        android:layout_marginLeft="@dimen/margin5"
+        android:layout_marginRight="@dimen/margin5"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        app:behavior_overlapTop="38dp"
+        app:cardBackgroundColor="@color/cp1"
+        app:cardCornerRadius="9dp"
+        app:cardElevation="0dp">
+
+        <ListView
+            android:id="@+id/sandwiches_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
