--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -133,13 +133,12 @@
         </android.support.v7.widget.CardView>
 
         <ImageView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginRight="160dp"
             android:layout_marginTop="130dp"
             android:src="@drawable/res_lettuce"
             app:layout_constraintBottom_toBottomOf="@id/cv_ellipse"
-            app:layout_constraintEnd_toEndOf="@id/cv_ellipse"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/cv_ellipse" />
 
