--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -22,8 +22,8 @@
             android:clipChildren="false"
             android:clipToPadding="false"
             app:cardBackgroundColor="@color/cp1"
-            app:cardCornerRadius="9dp"
-            app:cardElevation="0dp">
+            app:cardCornerRadius="@dimen/radius5"
+            app:cardElevation="@null">
 
 
         </android.support.v7.widget.CardView>
@@ -31,13 +31,10 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginRight="160dp"
-            android:layout_marginTop="130dp"
+            android:layout_height="@dimen/no_height"
             android:src="@drawable/res_lettuce"
             app:layout_constraintBottom_toBottomOf="@id/cv_ellipse"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/cv_ellipse" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -47,22 +44,22 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/cv_ellipse"
-            android:layout_width="320dp"
-            android:layout_height="320dp"
+            android:layout_width="@dimen/ellipse_frame_side_length"
+            android:layout_height="@dimen/ellipse_frame_side_length"
             android:foreground="@drawable/res_ellipse"
             android:foregroundGravity="center|fill"
             app:cardBackgroundColor="@android:color/transparent"
-            app:cardElevation="0dp"
+            app:cardElevation="@null"
             app:layout_constraintStart_toStartOf="@id/cv_burger"
             app:layout_constraintTop_toTopOf="@id/cv_burger">
 
             <android.support.v7.widget.CardView
-                android:layout_width="220dp"
-                android:layout_height="220dp"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
                 android:layout_gravity="center"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="110dp"
-                app:cardElevation="0dp">
+                app:cardCornerRadius="@dimen/radius_for_image"
+                app:cardElevation="@null">
 
                 <ImageView
                     android:id="@+id/image_iv"
@@ -73,8 +70,8 @@
         </android.support.v7.widget.CardView>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/no_height"
+            android:layout_height="@dimen/no_height"
             android:layout_marginTop="@dimen/margin3"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@id/cv_burger"
@@ -111,7 +108,7 @@
                     android:layout_centerInParent="true" />
             </RelativeLayout>
 
-            <android.support.v4.widget.NestedScrollView
+            <ScrollView
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -128,7 +125,7 @@
                         android:layout_width="wrap_content"
 
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="0dp"
+                        android:layout_marginTop="@dimen/no_height"
                         android:text="@string/detail_description_label"
                         android:textStyle="bold"
                         android:visibility="gone" />
@@ -176,7 +173,7 @@
 
                 </LinearLayout>
 
-            </android.support.v4.widget.NestedScrollView>
+            </ScrollView>
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
