--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,9 @@
         android:layout_marginRight="@dimen/margin5"
         android:clipChildren="false"
         android:clipToPadding="false"
-        app:behavior_overlapTop="38dp"
         app:cardBackgroundColor="@color/cp1"
-        app:cardCornerRadius="9dp"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/radius5"
+        app:cardElevation="@null">
 
         <ListView
             android:id="@+id/sandwiches_listview"
